# slipstream

./: .gitignore  CHANGELOG.md  Cargo.toml  Dioxus.toml  LICENSE  README.md  justfile  shell.nix
.mise/: config.toml
assets/: .gitignore  main.css
crates/pipes/: Cargo.toml
crates/pipes/src/: lib.rs  tests.rs
crates/slipfeed/: Cargo.toml
crates/slipfeed/src/: datetime.rs  entry.rs  feed.rs  filter.rs  lib.rs  tag.rs  tests.rs  updater.rs
crates/slipfeed/src/entry/: entry.rs  entry_set.rs  mod.rs
crates/slipknot/: Cargo.toml
crates/slipknot/src/: cache.rs  cli.rs  config.rs  feed_options.rs  feeds.rs  filters.rs  limits.rs  logging.rs  main.rs
crates/slipstore/: Cargo.toml
crates/slipstore/src/: lib.rs  tests.rs  v1.sql
crates/slipstream/: Cargo.toml
crates/slipstream-cli/: Cargo.toml
crates/slipstream-cli/src/: cli.rs  config.rs  database.rs  logging.rs  main.rs  prelude.rs  tests.rs
crates/slipstream-cli/src/feeds/: cache.rs  feed_options.rs  feeds.rs  filters.rs  updater.rs
crates/slipstream-cli/src/groups/: mod.rs
crates/slipstream-cli/src/modes/: mod.rs
crates/slipstream-cli/src/modes/config/: mod.rs
crates/slipstream-cli/src/modes/config/cli/: mod.rs
crates/slipstream-cli/src/modes/read/: command.rs  command_mode.rs  entry.rs  keyboard.rs  menu.rs  mod.rs  state.rs
crates/slipstream-cli/src/modes/read/config/: color.rs  command.rs  flag.rs  mod.rs  preview.rs  tag.rs
crates/slipstream-cli/src/modes/serve/: header_map_ext.rs  mod.rs
crates/slipstream-cli/src/modes/serve/config/: mod.rs
crates/slipstream-cli/src/modes/serve/web/: mod.rs
crates/slipstream-cli/src/modes/serve/web/content/: .ignore  template.html
crates/slipstream-feeds/: Cargo.toml
crates/slipstream-feeds/src/: datetime.rs  feed.rs  lib.rs  prelude.rs  tag.rs  tests.rs  transform.rs  updater.rs
crates/slipstream-feeds/src/entry/: entry.rs
crates/slipstream-feeds/src/feed/: feed_attributes.rs  feed_id.rs  feed_ref.rs  feed_trait.rs  mod.rs
crates/slipstream-feeds/src/feed/types/: mod.rs  standard_syndication.rs
crates/slipstream-feeds/src/feed/types/mastodon/: any.rs  manual.rs  mod.rs
crates/slipstream/src/: cli.rs  config.rs  database.rs  logging.rs  main.rs
crates/slipstream/src/feeds/: feed_options.rs  feeds.rs  mod.rs  updater.rs
crates/slipstream/src/modes/: mod.rs
crates/slipstream/src/modes/read/: command.rs  command_mode.rs  config.rs  entry.rs  keyboard.rs  mod.rs  state.rs
crates/slipstream/src/modes/read/config/: color.rs  command.rs  mod.rs  tag.rs
crates/slipstream/src/modes/serve/: mod.rs
crates/slipstream/src/modes/serve/config/: mod.rs
crates/slipstream/src/modes/serve/web/: mod.rs
crates/slipstream/src/modes/serve/web/content/: template.html
crates/slipstream/src/web/: mod.rs
crates/slipstream/src/web/content/: favicon.aseprite  template.html
examples/config/: slipknot.toml  slipreader.toml  slipstream.toml
src/: main.rs
