[workspace]
members = [
  "crates/slipfeed",
  "crates/slipstream",
]
resolver = "2"

[workspace.dependencies]
atom_syndication = "0.12.7"
chrono = { version = "0.4.41", features = ["serde"] }
clap = {version = "4.5.47", features = ["derive"] }
futures = "0.3.31"
resolve-path = "0.1.0"
reqwest = { version = "0.12.23", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive", "rc"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "chrono", "time", "uuid"] }
tokio = { version = "1.47.1", features = ["sync", "rt", "rt-multi-thread", "macros", "process", "signal"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[profile.dev]
opt-level = 1
overflow-checks = true

[profile.release]
opt-level = 3
overflow-checks = true
strip = true
lto = true
codegen-units = 1
