[workspace]
members = [
  "crates/slipstream-feeds",
  "crates/slipstream-cli",
]
resolver = "2"

[workspace.dependencies]
atom_syndication = "0.12"
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "4.5", features = ["derive"] }
fast_html2md = "0.0.48"
futures = "0.3"
markdown = "1.0"
resolve-path = "0.1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive", "rc"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "chrono", "time", "uuid"] }
tokio = { version = "1.47", features = ["sync", "rt", "rt-multi-thread", "macros", "process", "signal"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"

[workspace.package]
edition = "2024"
authors = ["hachha <hachha@hachha.dev>"]
keywords = ["rss", "atom", "feed", "reader"]
categories = []
repository = "https://github.com/HarrisonHall/slipstream"
homepage = "https://github.com/HarrisonHall/slipstream"
license-file = "LICENSE"
readme = "README.md"
rust-version = "1.85.0"

[profile.dev]
opt-level = 1
overflow-checks = true

[profile.release]
opt-level = 3
overflow-checks = true
strip = true
lto = true
codegen-units = 1
