[package]
name = "slipfeed"
description = "Feed fetcher, filterer, and aggregator."
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

atom_syndication = { workspace = true }
rss = "2.0"
