[package]
name = "slipfeed"
description = "Feed fetcher, filterer, and aggregator."
version = "0.2.1"
edition = "2021"

[dependencies]
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

atom_syndication = { workspace = true }
rss = "2.0"

async-trait = "0.1.85"
