[package]
name = "slipfeed"
description = "Feed fetching, filtering, and aggregating utilities."
version = "0.2.3"
edition = "2024"
authors = ["hachha <hachha@hachha.dev>"]
keywords = ["rss", "atom", "feed"]
categories = []
repository = "https://github.com/harrisonhall/slipstream"
readme = "README.md"
rust-version = "1.85.0"

[dependencies]
chrono = { workspace = true }
futures = { workspace = true }
resolve-path = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

atom_syndication = { workspace = true }
rss = "2.0.12"

async-trait = "0.1.85"
