[package]
name = "slipknot"
description = "Simple CLI `slipfeed` server."
version = "0.1.0"
edition = "2021"

[[bin]]
name = "slipknot"

[dependencies]
atom_syndication = { workspace = true }
axum = "0.7"
chrono = { workspace = true }
clap = { workspace = true }
resolve-path = "0.1.0"
serde = { workspace = true }
tokio = { workspace = true }
toml = { version = "0.8" }

slipfeed = { path = "../slipfeed" }
