[package]
name = "slipknot"
description = "Simple CLI `slipfeed` server."
version = "0.2.0"
edition = "2021"

[[bin]]
name = "slipknot"

[dependencies]
atom_syndication = { workspace = true }
axum = "0.7"
chrono = { workspace = true }
colored = "2.1"
clap = { workspace = true }
resolve-path = "0.1.0"
serde = { workspace = true }
shellexpand = "3.1"
tokio = { workspace = true }
toml = { version = "0.8" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

slipfeed = { path = "../slipfeed" }
