[package]
name = "slipstore"
description = "`slipfeed` persistent storage."
version = "0.1.0"
edition = "2021"

[dependencies]
# sea-orm = { version = "1.1.0", features = [ "sqlx-all", "runtime-tokio", "macros" ] }
# async-recursion = "1.1"
# bon = { workspace = true }
# chrono = { workspace = true }
# futures = { workspace = true }
# reqwest = { workspace = true }
# syndication = { workspace = true }
tokio = { workspace = true }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "sqlite", "chrono", "macros" ], default-features = false}

slipfeed = { path = "../slipfeed" }
