[package]
name = "slipstream-cli"
description = "Simple CLI `slipfeed` server, with web support and a TUI reader."
version = "2.11.0"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
rust-version.workspace = true

[[bin]]
name = "slipstream"
path = "src/main.rs"

[dependencies]
ansi-to-tui = "7.0.0"
anyhow = "1.0.99"
axum = "0.8.4"
# chrono-tz = { version = "0.10.4", features = ["serde", "case-insensitive"] }
chrono-tz = { version = "0.10.4", features = ["serde"] }
crossterm = { version="0.28.1", features=["serde"] }
directories = "6.0.0"
colored = "3.0.0"
handlebars = "6.3.2"
humantime = "2.2.0"
humantime-serde = "1.1.1"
opml = "1.1.6"
pulldown-cmark = "0.13.0"
ratatui = { version="0.29.0", features=["serde"] }
rust-embed = { version="8.7.2", features=["debug-embed", "include-exclude"] }
semver = "1.0.27"
shellexpand = "3.1.1"
shlex = "1.3.0"
toml = { version = "0.9.7" }
tui-markdown = "0.3.5"

atom_syndication = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
fast_html2md = { workspace = true }
futures = { workspace = true }
markdown = { workspace = true }
resolve-path = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

slipstream-feeds = { path = "../slipstream-feeds", version = "0.5.2" }
