[package]
name = "slipstream-cli"
description = "Simple CLI `slipfeed` server, with web support and a TUI reader."
version = "2.15.0"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
rust-version.workspace = true

[[bin]]
name = "slipstream"
path = "src/main.rs"

[dependencies]
ansi-to-tui = "7.0"
axum = "0.8"
# chrono-tz = { version = "0.10.4", features = ["serde", "case-insensitive"] }
chrono-tz = { version = "0.10", features = ["serde"] }
color-eyre = "0.6"
crossterm = { version="0.28", features=["serde"] }
directories = "6.0"
colored = "3.0"
handlebars = "6.3"
humantime = "2.2"
humantime-serde = "1.1"
opml = "1.1"
pulldown-cmark = "0.13"
ratatui = { version="0.29", features=["serde"] }
rust-embed = { version="8.7", features=["debug-embed", "include-exclude"] }
semver = "1.0"
shellexpand = "3.1"
shlex = "1.3"
toml = { version = "0.9" }
tui-markdown = "0.3"

atom_syndication = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
fast_html2md = { workspace = true }
futures = { workspace = true }
markdown = { workspace = true }
resolve-path = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

slipstream-feeds = { path = "../slipstream-feeds", version = "0.7.1" }
