[package]
name = "slipstream-feeds"
description = "Feed fetching, filtering, and aggregating utilities."
version = "0.2.5"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
fast_html2md = { workspace = true }
futures = { workspace = true }
resolve-path = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

atom_syndication = { workspace = true }
rss = "2.0.12"

async-trait = "0.1.85"
