[package]
name = "slipstream-feeds"
description = "Feed fetching, filtering, and aggregating utilities."
version = "0.5.2"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
fast_html2md = { workspace = true }
futures = { workspace = true }
resolve-path = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-test = { workspace = true }

atom_syndication = { workspace = true }
rss = "2.0.12"

async-trait = "0.1.85"
# chrono-tz = { version = "0.10.4", features = ["serde", "case-insensitive", "filter-by-regex"] }
serde_json = "1.0.145"
# mastodon-async = { version = "1.3.2", default-features = false, features = ["mt", "rustls-tls"] }
# mastodon-async = { git = "https://github.com/dscottboggs/mastodon-async", rev = "5054c03633453135ea2af8b4bcec84f8bcaa6247", default-features = false, features = ["mt", "rustls-tls"] }

[dev-dependencies]
tracing-subscriber = { workspace = true }
