[package]
name = "slipstream"
description = "Simple CLI `slipfeed` server, with web support."
version = "1.1.0"
edition = "2024"
authors = ["hachha <hachha@hachha.dev>"]
keywords = ["rss", "atom", "feed"]
categories = []
repository = "https://github.com/harrisonhall/slipstream"
readme = "README.md"
rust-version = "1.85.0"


[[bin]]
name = "slipstream"

[dependencies]
anyhow = "1.0"
axum = "0.7"
directories = "5.0"
colored = "2.1"
handlebars = "6.3"
humantime = "2.1"
humantime-serde = "1.1"
ratatui = "0.29"
resolve-path = "0.1"
rust-embed = { version="8.4", features=["debug-embed", "include-exclude"] }
shellexpand = "3.1"
toml = { version = "0.8" }
tui-markdown = "0.3.3"

htmd = "0.1"
fast_html2md = { version = "0.0.48", features = ["scraper"] }

atom_syndication = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

slipfeed = { path = "../slipfeed" }
