[package]
name = "slipstream"
description = "Simple CLI `slipfeed` server, with web support and a TUI reader."
version = "2.0.0"
edition = "2024"
authors = ["hachha <hachha@hachha.dev>"]
keywords = ["rss", "atom", "feed"]
categories = []
repository = "https://github.com/harrisonhall/slipstream"
readme = "README.md"
rust-version = "1.85.0"


[[bin]]
name = "slipstream"

[dependencies]
ansi-to-tui = "7.0.0"
anyhow = "1.0"
axum = "0.7"
crossterm = { version="0.28.1", features=["serde"] }
directories = "5.0"
colored = "2.1"
handlebars = "6.3"
humantime = "2.1"
humantime-serde = "1.1"
ratatui = { version="0.29", features=["serde"] }
rust-embed = { version="8.4", features=["debug-embed", "include-exclude"] }
shellexpand = "3.1"
toml = { version = "0.8" }

atom_syndication = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
resolve-path = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

slipfeed = { path = "../slipfeed" }
